--- a/00-simple-local-rag-video.ipynb
+++ b/00-simple-local-rag-video.ipynb
@@ -67,6 +67,183 @@
     "2. Privacy - Perhaps you're using internal documents you don't want to feed somewhere.\n",
     "3. Cost - No pricing for API calls."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da02c335-3f9c-4aeb-8a50-ef3d8baf705f",
+   "metadata": {},
+   "source": [
+    "## Build goals: \n",
+    "\n",
+    "Build RAG pipeline that runs locally on my device. It will do the following:\n",
+    "\n",
+    "1. Open up a document I pass it, whether it be a PDF, .MD file, etc.\n",
+    "2. Format the text for an embedding model.\n",
+    "3. Embed all the neccesary chunks of text and turn it into a numerical representation which can be stored.\n",
+    "4. Build a retrieval system (vector search?) to find relevant chunks of text based on the query.\n",
+    "5. Generate a prompt that incorporates the retrieved pieces of text.\n",
+    "6. Generate an answer to the query based on the passage of the document with an LLM.\n",
+    "\n",
+    "1. Steps 1-3: Document preprocessing and embedding creation.\n",
+    "2. Step 4-6: Search and answer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c76708b-0a23-45e2-8dbf-6adae0928a58",
+   "metadata": {},
+   "source": [
+    "### 1. Document/Text processing and embedding creation\n",
+    "\n",
+    "Neccesary:\n",
+    "* PDF document of choice (Not neccesarily PDF - could be Markdown, .txt, etc.)\n",
+    "* Embedding model of choice.\n",
+    "\n",
+    "Steps:\n",
+    "1. Import document.\n",
+    "2. Proces text for embedding (split into chunks of sentences).\n",
+    "3. Embed text chunks with embedding model.\n",
+    "4. Save embeddings to file for later use. (Will store on file for many years, however long you need.) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47b37eac-788e-4db7-84e2-a6861db60826",
+   "metadata": {},
+   "source": [
+    "### Import PDF document\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "969e07f6-fab5-4548-9755-40f1b63a8229",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] File doesn't exist, downloading...\n",
+      "[INFO] The file has been downloaded and saved as human-nutrition-text.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import requests\n",
+    "\n",
+    "# Grab PDF path\n",
+    "pdf_path = \"human-nutrition-text.pdf\"\n",
+    "\n",
+    "# Download PDF\n",
+    "if not os.path.exists(pdf_path):\n",
+    "    print(\"[INFO] File doesn't exist, downloading...\")\n",
+    "\n",
+    "    # Enter URL of the PDF\n",
+    "    url = \"https://pressbooks.oer.hawaii.edu/humannutrition2/open/download?type=pdf\"\n",
+    "\n",
+    "    # Local filename to save the file we just downloaded.\n",
+    "\n",
+    "    filename = pdf_path\n",
+    "\n",
+    "    # Send a GET request to the URL. \n",
+    "    response = requests.get(url)\n",
+    "\n",
+    "    # See if request was successful \n",
+    "    if response.status_code == 200:\n",
+    "        # Open file and save it.\n",
+    "        with open(filename, \"wb\") as file:\n",
+    "            file.write(response.content)\n",
+    "        print(f\"[INFO] The file has been downloaded and saved as {filename}\")\n",
+    "    else:\n",
+    "        print(f\"[INFO] Failed to download the file. Status code: {response.status_code}\")\n",
+    "\n",
+    "else:\n",
+    "    print(f\"File {pdf_path} already exists.\")\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bafc7c0-5070-4261-94b9-cb960cf30d72",
+   "metadata": {},
+   "source": [
+    "We now have the PDF! So we can open it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cf0b0f73-907b-487f-892c-8224fdd7b81f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58c487473a6448c3b8ed68a7ab59233b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'pages_and_text' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 26\u001b[39m\n\u001b[32m     18\u001b[39m         pages_and_text.append({\u001b[33m\"\u001b[39m\u001b[33mpage_number\u001b[39m\u001b[33m\"\u001b[39m: page_number - \u001b[32m41\u001b[39m,\n\u001b[32m     19\u001b[39m                                \u001b[33m\"\u001b[39m\u001b[33mpage_char_count\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mlen\u001b[39m(text), \n\u001b[32m     20\u001b[39m                                \u001b[33m\"\u001b[39m\u001b[33mpage_word_count\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mlen\u001b[39m(text.split(\u001b[33m\"\u001b[39m\u001b[33m \u001b[39m\u001b[33m\"\u001b[39m)),\n\u001b[32m     21\u001b[39m                                \u001b[33m\"\u001b[39m\u001b[33mpage_sentence_count_raw\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mlen\u001b[39m(text.split(\u001b[33m\"\u001b[39m\u001b[33m. \u001b[39m\u001b[33m\"\u001b[39m)),\n\u001b[32m     22\u001b[39m                                \u001b[33m\"\u001b[39m\u001b[33mpage_token_count\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mlen\u001b[39m(text) / \u001b[32m4\u001b[39m, \u001b[38;5;66;03m# 1 token = ~4 characters.\u001b[39;00m\n\u001b[32m     23\u001b[39m                                \u001b[33m\"\u001b[39m\u001b[33mtext\u001b[39m\u001b[33m\"\u001b[39m: text})\n\u001b[32m     24\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m pages_and_texts\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m pages_and_texts = \u001b[43mopen_and_read_pdf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpdf_path\u001b[49m\u001b[43m=\u001b[49m\u001b[43mpdf_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     27\u001b[39m pages_and_texts[:\u001b[32m2\u001b[39m]\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 18\u001b[39m, in \u001b[36mopen_and_read_pdf\u001b[39m\u001b[34m(pdf_path)\u001b[39m\n\u001b[32m     16\u001b[39m text = page.get_text()\n\u001b[32m     17\u001b[39m text = text_formatter(text=text)\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m \u001b[43mpages_and_text\u001b[49m.append({\u001b[33m\"\u001b[39m\u001b[33mpage_number\u001b[39m\u001b[33m\"\u001b[39m: page_number - \u001b[32m41\u001b[39m,\n\u001b[32m     19\u001b[39m                        \u001b[33m\"\u001b[39m\u001b[33mpage_char_count\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mlen\u001b[39m(text), \n\u001b[32m     20\u001b[39m                        \u001b[33m\"\u001b[39m\u001b[33mpage_word_count\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mlen\u001b[39m(text.split(\u001b[33m\"\u001b[39m\u001b[33m \u001b[39m\u001b[33m\"\u001b[39m)),\n\u001b[32m     21\u001b[39m                        \u001b[33m\"\u001b[39m\u001b[33mpage_sentence_count_raw\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mlen\u001b[39m(text.split(\u001b[33m\"\u001b[39m\u001b[33m. \u001b[39m\u001b[33m\"\u001b[39m)),\n\u001b[32m     22\u001b[39m                        \u001b[33m\"\u001b[39m\u001b[33mpage_token_count\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mlen\u001b[39m(text) / \u001b[32m4\u001b[39m, \u001b[38;5;66;03m# 1 token = ~4 characters.\u001b[39;00m\n\u001b[32m     23\u001b[39m                        \u001b[33m\"\u001b[39m\u001b[33mtext\u001b[39m\u001b[33m\"\u001b[39m: text})\n\u001b[32m     24\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m pages_and_texts\n",
+      "\u001b[31mNameError\u001b[39m: name 'pages_and_text' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import fitz\n",
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "def text_formatter(text: str) -> str:\n",
+    "    \"\"\"Performs minor formatting on text.\"\"\"\n",
+    "    cleaned_text = text.replace(\"\\n\", \" \").strip()\n",
+    "\n",
+    "    # Potentially more text formatting functions if you need them can go here.\n",
+    "\n",
+    "    return cleaned_text\n",
+    "\n",
+    "def open_and_read_pdf(pdf_path: str) -> list[dict]:\n",
+    "    doc = fitz.open(pdf_path)\n",
+    "    pages_and_texts = []\n",
+    "    for page_number, page in tqdm(enumerate(doc)):\n",
+    "        text = page.get_text()\n",
+    "        text = text_formatter(text=text)\n",
+    "        pages_and_text.append({\"page_number\": page_number - 41,\n",
+    "                               \"page_char_count\": len(text), \n",
+    "                               \"page_word_count\": len(text.split(\" \")),\n",
+    "                               \"page_sentence_count_raw\": len(text.split(\". \")),\n",
+    "                               \"page_token_count\": len(text) / 4, # 1 token = ~4 characters.\n",
+    "                               \"text\": text})\n",
+    "        return pages_and_texts\n",
+    "\n",
+    "pages_and_texts = open_and_read_pdf(pdf_path=pdf_path)\n",
+    "pages_and_texts[:2]\n",
+    "                               "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d71c7b0-92bd-4b85-9d71-c82fed1a9a02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
