Working on chunking sentences

--- a/00-simple-local-rag-video.ipynb
+++ b/00-simple-local-rag-video.ipynb
@@ -784,7 +784,12 @@
     "\n",
     "To keep it simple, splitting into groups of 10 sentences. However, could try any other, like 5, or 7, etc.\n",
     "\n",
-    "There's frameworks ffor "
+    "There's frameworks for doing this, but for this purpose, we are using just base Python.\n",
+    "\n",
+    "But why is this done?\n",
+    "1. Text are easier to filter. (smaller groups of texts are more easily inspected than larger groups of texts.)\n",
+    "2. Text chunks are able to fit into our embedding model context window. Roughly 384 tokens as a limit depending on embedding model.\n",
+    "3. Contexts passed to an LLM can be "
    ]
   },
   {
